--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_child.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_child.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_child_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="io.hackathon.santaclaus.activity.MainActivity">
+    tools:context="io.hackathon.santaclaus.activity.ChildActivity">
+
+    <ListView
+        android:id="@+id/childList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
