--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_message.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_message.xml
@@ -1,68 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_message"
-    android:orientation="vertical"
+    android:id="@+id/v"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scrollbars="none"
+    tools:context="io.hackathon.santaclaus.activity.MessageActivity">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="io.hackathon.santaclaus.MessageActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/messageTitle"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/message_title"
-        android:textSize="@dimen/message_title_size" />
-
-    <ListView
-        android:id="@+id/childList"
-        android:layout_below="@+id/messageTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="300px">
-    </ListView>
-
-    <TextView
-        android:id="@+id/messageListLabel"
-        android:layout_below="@+id/childList"
-        android:layout_marginTop="40px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/message_message_list_label" />
 
     <ListView
         android:id="@+id/messageList"
-        android:layout_below="@+id/messageListLabel"
+        android:layout_marginTop="50px"
+        android:layout_below="@+id/messageTitle"
         android:layout_width="wrap_content"
-        android:layout_height="300px">
+        android:layout_height="750px">
     </ListView>
 
     <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="50px"
         android:layout_below="@+id/messageList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/messageLabel"
             android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/message_message_label" />
-        <Button
+        <ImageView
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/message_send_button" />
+            android:src="@drawable/message_send_button" />
+        <EditText
+            android:id="@+id/message"
+            android:layout_below="@+id/messageLabel"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:inputType="text|textMultiLine" />
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/message"
-        android:layout_alignParentBottom="true"
-        android:layout_width="300px"
-        android:layout_height="150dp"
-        android:hint="Message"
-        android:inputType="text|textMultiLine" />
-
 </RelativeLayout>
+</ScrollView>
