--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
@@ -76,7 +76,9 @@
         <EditText
             android:id="@+id/birthday"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="date" />
     </LinearLayout>
 
     <LinearLayout
@@ -92,6 +94,29 @@
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonChoose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select" />
+        <EditText
+            android:id="@+id/editTextName"
+            android:hint="Name For Image"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/buttonUpload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upload" />
     </LinearLayout>
 
     <Button
