insert image to some page

--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_login.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_login.xml
@@ -84,4 +84,15 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/santasan"
+            android:scaleType="fitEnd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
