--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
@@ -31,7 +31,8 @@
         <EditText
             android:id="@+id/email"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"/>
     </LinearLayout>
 
     <LinearLayout
@@ -127,4 +128,16 @@
         android:text="@string/signup_ok_button"
         android:onClick="signup" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/child"
+            android:scaleType="fitEnd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
+
