--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_message.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_message.xml
@@ -41,9 +41,11 @@
             android:layout_height="wrap_content"
             android:text="@string/message_message_label" />
         <ImageView
+            android:id="@+id/createMessage"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="createMessage"
             android:src="@drawable/message_send_button" />
         <EditText
             android:id="@+id/message"
