--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_sign_up.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_marginTop="20px"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
@@ -30,6 +30,8 @@
 
         <EditText
             android:id="@+id/email"
+            android:ems="20"
+            android:layout_marginLeft="15px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"/>
@@ -37,7 +39,7 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
@@ -46,6 +48,8 @@
 
         <EditText
             android:id="@+id/password"
+            android:ems="15"
+            android:layout_marginLeft="15px"
             android:inputType="textPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -62,6 +66,8 @@
 
         <EditText
             android:id="@+id/name"
+            android:ems="20"
+            android:layout_marginLeft="15px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -80,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:layout_marginLeft="15px"
             android:inputType="date" />
     </LinearLayout>
 
