--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_login.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
 
         <EditText
             android:id="@+id/email"
+            android:paddingLeft="20px"
             android:layout_width="fill_parent"
             android:layout_height="100px"
             android:hint="you@example.com"
@@ -43,6 +44,7 @@
 
         <EditText
             android:id="@+id/password"
+            android:paddingLeft="20px"
             android:layout_marginTop="20px"
             android:inputType="textPassword"
             android:layout_width="fill_parent"
