--- a/05_Development/Android_App/Santaclaus/app/src/main/res/layout/child_list.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/res/layout/child_list.xml
@@ -5,6 +5,7 @@
 
     <ImageView
         android:id="@+id/avatar"
+        android:layout_marginTop="20px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/user_avatar" />
@@ -13,6 +14,8 @@
         android:id="@+id/name"
         android:layout_toRightOf="@+id/avatar"
         android:layout_marginLeft="30px"
+        android:layout_marginTop="20px"
+        android:layout_marginBottom="20px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name" />
